syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

package dev.httpmarco.polocloud.v1.proto;

option java_package = "dev.httpmarco.polocloud.v1.player";
option java_multiple_files = true;

service PlayerController {
  rpc findAll (google.protobuf.Empty) returns (PlayerFindResponse);
  rpc findByName (PlayerFindByNameRequest) returns (PlayerFindResponse);
  rpc findByService (PlayerFindByServiceRequest) returns (PlayerFindResponse);
  rpc playerCount(google.protobuf.Empty) returns (PlayerCountResponse);

  rpc registerActor(PlayerActorAuthRequest) returns (stream PlayerActorRegister);
}

message PlayerFindByNameRequest {
  string name = 1;
}

message PlayerFindByServiceRequest {
  string current_service_name = 1;
}

message PlayerSnapshot {
  string unique_id = 1;
  string name = 2;
  string current_service_name = 3;
  int64 first_time_joined = 4;
}

message PlayerFindResponse {
  repeated PlayerSnapshot players = 1;
}

message PlayerCountResponse {
  int32 count = 1;
}

message PlayerActorRegister {
  PlayerActorType type = 1;
  google.protobuf.Any content = 2;
}

message PlayerActorAuthRequest {
  string serviceId = 1;
}

enum PlayerActorType {
  MESSAGE = 0;
  KICK = 1;
  SEND = 2;
}

message PlayerActorMessage {
  string uuid = 1;
  string message = 2;
}

message PlayerActorKick {
  string uuid = 1;
  string message = 2;
}

message PlayerActorSend {
  string uuid = 1;
  string serviceId = 2;
}
